--- a/air_example.toml
+++ b/air_example.toml
@@ -35,7 +35,8 @@ delay = 0 # ms
 # Stop running old binary when build errors occur.
 stop_on_error = true
 # Send Interrupt signal before killing process (windows does not support this feature)
-send_interrupt = false
+# SIGTERM = 15
+terminate_signal = 15
 # Delay after sending Interrupt signal
 kill_delay = 500 # ms
 # Rerun binary or not
