--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,26 +31,26 @@ jobs:
           file: ./coverage.txt
           verbose: true
 
-  push_to_docker_latest:
-    name: push master code to docker latest image
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: cosmtrek/air:latest
-      - name: show image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+#  push_to_docker_latest:
+#    name: push master code to docker latest image
+#    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v1
+#      - name: set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
+#      - name: login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      - name: build and push
+#        id: docker_build
+#        uses: docker/build-push-action@v2
+#        with:
+#          push: true
+#          platforms: linux/amd64,linux/arm64
+#          tags: cosmtrek/air:latest
+#      - name: show image digest
+#        run: echo ${{ steps.docker_build.outputs.digest }}
