--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,21 +32,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: push to docker hub
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: cosmtrek/air:${{ env.VERSION }}
-      - name: show docker image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v1
+#      - name: set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
+#      - name: login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      - name: push to docker hub
+#        id: docker_build
+#        uses: docker/build-push-action@v2
+#        with:
+#          push: true
+#          platforms: linux/amd64,linux/arm64
+#          tags: cosmtrek/air:${{ env.VERSION }}
+#      - name: show docker image digest
+#        run: echo ${{ steps.docker_build.outputs.digest }}
